adicionado todas as funções de serial e database

--- a/desktop/static/pages/Login/index.html
+++ b/desktop/static/pages/Login/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="heading">XI SECAE</h1>
-        <p>Semana de Engenharia de Controle e Automação & Elétrica</p>
-        <button id="changeTextBtn">Clique para Iniciar</button>
+        <h1 id="heading">Login!</h1>
+        <p>Welcome to my simple HTML page with external CSS and JavaScript.</p>
+        <button id="changeTextBtn">Change Text</button>
     </div>
 
     <script type="text/javascript" src="/eel.js"></script>
