comunicação serial ta pronta

--- a/desktop/static/pages/Home/index.html
+++ b/desktop/static/pages/Home/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="heading">Home!</h1>
-        <p>Welcome to my simple HTML page with external CSS and JavaScript.</p>
-        <button id="changeTextBtn">Change Text</button>
+        <h1>Tela Home</h1>
+
+        <p id="heading">
+            Welcome to my simple HTML page with external CSS and JavaScript.
+        </p>
+
+        <button id="ConnectSerialBtn">Change Text</button>
     </div>
 
     <script type="text/javascript" src="/eel.js"></script>
