ultima atualizacao antes do front

--- a/desktop/static/pages/Register/index.html
+++ b/desktop/static/pages/Register/index.html
@@ -14,14 +14,6 @@
             <div style="color: transparent;">voltar</div>
         </div>
 
-        <form style="display: flex; align-items: center;">
-            <label for="opcoes">Atividade </label>
-            <div style="padding: 3px;"></div>
-            
-            <select id="taskOptions"></select>
-            <div style="padding: 3px;"></div>
-        </form>
-
         <div class="formOptions">
             <label for="opcoes">Nome: </label>
             <div style="padding: 3px;"></div>
@@ -46,11 +38,8 @@
 
         <div style="padding: 5%"></div>
 
-        <div style="display: flex; flex-direction: row;">
-            <button id="searchUserButton">Procurar Usuário</button>
-    
-            <button id="registerTask">dar Presença</button>
-        </div>
+        <p>Semana de Engenharia de Controle e Automação & Elétrica</p>
+        <button id="registerUserButton">Clique Registrar</button>
     </div>
 
     <script type="text/javascript" src="/eel.js"></script>
