--- a/desktop/static/index.html
+++ b/desktop/static/index.html
@@ -9,6 +9,30 @@
 <body>
     <div class="container">
         <h1 id="heading">XI SECAE</h1>
+
+        <div class="formOptions">
+            <form style="display: flex; align-items: center;">
+                <label for="opcoes">Selecione a porta: </label>
+                <div style="padding: 3px;"></div>
+                
+                <select id="opcoes" name="opcoes"></select>
+                <div style="padding: 3px;"></div>
+            </form>
+
+            <button id="sendButtonForm" type="submit">Enviar</button>
+        </div>
+
+        <div style="padding: .5rem;"></div>
+
+        <div class="formOptions">
+            <label for="opcoes">Resposta: </label>
+            <div style="padding: 3px;"></div>
+
+            <input type="text" id="meuInputForm" placeholder="">
+        </div>
+        
+        <div style="padding: 5%"></div>
+
         <p>Semana de Engenharia de Controle e Automação & Elétrica</p>
         <button id="changeTextBtn">Clique para Iniciar</button>
     </div>
