--- a/desktop/static/pages/Home/index.html
+++ b/desktop/static/pages/Home/index.html
@@ -8,13 +8,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>Tela Home</h1>
+        <button id="btnVoltar" style="display: flex; align-items: flex-start;">voltar</button>
 
-        <p id="heading">
-            Welcome to my simple HTML page with external CSS and JavaScript.
-        </p>
+        <div style="padding: 10%;"></div>
 
-        <button id="ConnectSerialBtn">Change Text</button>
+        <h1 id="heading">XI SECAE</h1>
+        
+        <div style="display: flex; justify-content: center; align-items: center;">
+            <button id="buttonLog">Logar</button>
+            <div style="padding: 1rem;"></div>
+            <button id="buttonReg">Cadastrar</button>
+        </div>
     </div>
 
     <script type="text/javascript" src="/eel.js"></script>
